--- a/accordion/public/index.html
+++ b/accordion/public/index.html
@@ -5,5 +5,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
-  <body></body>
+
+  <body>
+    <div class="accordion">
+      <div class="accordion-item">
+        <div class="accordion-handle">タイトルA</div>
+        <div>コンテンツA</div>
+      </div>
+
+      <div class="accordion-item">
+        <div class="accordion-handle">タイトルB</div>
+        <div>コンテンツB</div>
+      </div>
+
+      <div class="accordion-item">
+        <div class="accordion-handle">タイトルC</div>
+        <div>コンテンツC</div>
+      </div>
+    </div>
+
+    <script>
+      window.addEventListener('DOMContentLoaded', () => {
+        const accordionElement = document.querySelector('.accordion');
+        if (!accordionElement) {
+          return;
+        }
+
+        const accordion = new Accordion(accordionElement);
+        const accordionHandleElements = accordionElement.querySelectorAll('.accordion-handle');
+
+        accordion.open(0); // accordion-item の 0 番目を開く
+        accordion.open(accordionHandleElements.item(0)); // accordion-item の 0 番目を開く
+
+        accordion.close(1); // accordion-item の 1 番目を閉じる
+        accordion.close(accordionHandleElements.item(1)); // accordion-item の 1 番目を閉じる
+
+        accordion.toggle(2); // accordion-item の 2 番目をトグルする
+        accordion.toggle(accordionHandleElements.item(2)); // accordion-item の 2 番目をトグルする
+      });
+    </script>
+  </body>
 </html>
